# LC-Pearl

./: .gitignore  CITATION.cff  CONTRIBUTORS.md  MANUAL.md  README.en.md  README.md  README.zh-CN.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.0.1.md  RELEASE_NOTES_v2.1.0.md  lc_pearl_cli.py  lc_pearl_here.py  pyproject.toml
configs/: quick_run.toml  quick_validate.toml
docs/: LC_Pearl_v2.1_Academic_User_Manual.md  lc_domain_pearl_algorithm_explained_2026-04-29_final-upgrade.html  lc_domain_pearl_parameter_precision_plan_2026-04-29_final-upgrade.html  lc_domain_pearl_pipeline_upgrade.md  lc_domain_pearl_topology_preparation_README_2026-04-29_v1.md  lc_domain_pearl_v2_algorithm_reference.html  lc_pearl_algorithm_details.md  lc_pearl_algorithm_reference.html  lc_pearl_operation_manual.md  lc_pearl_user_guide.html  lc_pearl_user_guide.md  lc_pearl_v2_user_guide.html  lc_run0_validator_README_2026-04-29_v1.md
releases/: lc-pearl-v1.0.0-source-20260502.tar.gz.sha256  lc-pearl-v2.0.1-source-20260502.tar.gz.sha256  lc-pearl-v2.1.0-source-20260503.tar.gz.sha256
scripts/: gb_pair_audit.py  lammps_pairlocal_compare.py  lc_calibrate_thresholds.py  lc_domain_pearl_pipeline.py  lc_domain_size_counts.py  lc_lammps_run0_validate.py  lc_ovito_basic_merge.py  lc_sampling_manifest.py  lc_threshold_prior.py  lc_threshold_recommend.py  lc_topology_exclusions.py  lc_topology_prepare.py  liquid_crystal_aggregation.py
templates/lc_pearl_preflight/: README.md  lc_pearl_config.toml
templates/lc_pearl_preflight/lammps/: README.md  lammps_executable.txt
templates/lc_pearl_preflight/thresholds/: README.md
templates/lc_pearl_preflight/topology/: README.md
templates/lc_pearl_preflight/validation/: README.md
tests/: test_domain_size_counts.py  test_threshold_prior_lobe.py
