[project]
name = "lc-pearl"
version = "1.0.0"
description = "LC-Pearl: liquid-crystal domain and pearl-necklace analysis pipeline for LAMMPS dump trajectories."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "matplotlib",
]

[project.scripts]
lc-pearl = "lc_pearl_cli:main"
lc-pearl-here = "lc_pearl_here:main"

[tool.setuptools]
py-modules = ["lc_pearl_cli", "lc_pearl_here"]

[tool.setuptools.data-files]
"share/lc-pearl" = [
  "README.md",
  "VERSION",
  "RELEASE_NOTES_v1.0.0.md",
  "CITATION.cff",
]
"share/lc-pearl/configs" = [
  "configs/quick_run.toml",
  "configs/quick_validate.toml",
]
"share/lc-pearl/templates/lc_pearl_preflight" = [
  "templates/lc_pearl_preflight/README.md",
  "templates/lc_pearl_preflight/lc_pearl_config.toml",
]
"share/lc-pearl/templates/lc_pearl_preflight/lammps" = [
  "templates/lc_pearl_preflight/lammps/README.md",
  "templates/lc_pearl_preflight/lammps/lammps_executable.txt",
]
"share/lc-pearl/templates/lc_pearl_preflight/topology" = [
  "templates/lc_pearl_preflight/topology/README.md",
]
"share/lc-pearl/templates/lc_pearl_preflight/validation" = [
  "templates/lc_pearl_preflight/validation/README.md",
]
"share/lc-pearl/templates/lc_pearl_preflight/thresholds" = [
  "templates/lc_pearl_preflight/thresholds/README.md",
]
"share/lc-pearl/docs" = [
  "docs/lc_pearl_algorithm_reference.html",
  "docs/lc_pearl_user_guide.html",
  "docs/lc_domain_pearl_v2_algorithm_reference.html",
  "docs/lc_pearl_v2_user_guide.html",
]
"share/lc-pearl/scripts" = [
  "scripts/gb_pair_audit.py",
  "scripts/lammps_pairlocal_compare.py",
  "scripts/lc_calibrate_thresholds.py",
  "scripts/lc_domain_pearl_pipeline.py",
  "scripts/lc_lammps_run0_validate.py",
  "scripts/lc_ovito_basic_merge.py",
  "scripts/lc_sampling_manifest.py",
  "scripts/lc_threshold_recommend.py",
  "scripts/lc_threshold_prior.py",
  "scripts/lc_topology_exclusions.py",
  "scripts/lc_topology_prepare.py",
  "scripts/liquid_crystal_aggregation.py",
]
